fixed banner buttons on mobile

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -383,19 +383,17 @@
 
 	
 
-	.b1 {
-		margin-left: -40px;
-		margin-top: -30px;
+	.btn1 {
+		margin-top: -40px;
+		margin-left: 15px;
 	}
 
-	.b2 {
-		margin-left: -40px;
-		margin-top: 40px;
+	.btn2 {
+		margin-left: 15px;
 	}
 
-	.b3 {
-		margin-left: -40px;
-		margin-top: 40px;
+	.btn3 {
+		margin-left: 15px;
 	}
 
 	.pd-bottom-120 {
