--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -585,12 +585,13 @@ ul {
 }
 
 .btn1 {
+  margin-top: 50px;
   width: 190px;
   border: 2px solid #fff;
   background-color: transparent;
   color: white;
   border-radius: 5px;
-  margin-left: 50px;
+  margin-left: -720px;
   height: 50px;
   padding: 0 35px;
   position: relative;
@@ -602,13 +603,15 @@ ul {
 
 
 
+
 .btn2 {
+  margin-top: 50px;
   width: 190px;
   border: 2px solid #fff;
   background-color: transparent;
   color: white;
   border-radius: 5px;
-  margin-left: 50px;
+  margin-left: -450px;
   height: 50px;
   padding: 0 35px;
   position: relative;
@@ -619,10 +622,11 @@ ul {
 }
 
 .btn3 {
+  margin-top: 50px;
   width: 190px;
   background-color: #0080ff;
   color: white;
-  margin-left: 50px;
+  margin-left: -180px;
   height: 50px;
   line-height: 50px;
   padding: 0 35px;
@@ -2335,6 +2339,8 @@ margin-bottom: 0px;
   background: rgba(0, 0, 0, 25%);
 }
 
+
+
 .banner-txt h3 {
   color: white;
 }
@@ -2381,8 +2387,8 @@ margin-bottom: 0px;
 }
 
 .banner-inner h2 {
-  margin-left: -200px;
-  margin-top: -120px;
+  margin-left: 100px;
+  margin-top: -55px;
   font-size: 60px;
   color: #0066CB;
   font-weight: 700;
